@@ -1,7 +1,11 @@
 # version 0.62.1
 08/07/2019
-   - Added tests for public metadata response in search api (margaretha, issue #43)
+   - Added tests for public metadata response in search api (margaretha, 
+     issue #43)
    - Disabled some tests of unused/disabled web-services (margaretha)
+07/08/2019
+   - Fixed missing scopes after requesting access token with refresh token 
+     (margaretha)
 
 # version 0.62
 28/02/2019
